--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="text-center" id="viewerCanvas" style="width: 800px; height: 600px"></div>
+      <div class="text-center" id="viewerCanvas" style="width: full; height: 600px"></div>
     </div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
   </body>
